--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "graphql": "^14.4.2",
     "graphql-tag": "^2.10.1",
     "graphql-tools": "^4.0.5",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.3.0",
     "mongoose": "^5.6.9",
     "morgan": "~1.9.1",
