--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,15 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
-/.pnp
+**/node_modules
+.pnp
 .pnp.js
 
 # testing
-/coverage
+**/coverage
 
 # production
-/build
+**/build
 
 # misc
 .DS_Store
@@ -18,9 +18,13 @@
 .env.test.local
 .env.production.local
 
+**/.env
+
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
 # linaria
-src/.linaria_cache
+**/.linaria_cache
+
+
