--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,38 +1,32 @@
 {
-  "name": "linaria-cra",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-scripts": "2.1.8"
-  },
+  "name": "frontend",
+  "version": "1.0.0",
+  "main": "index.js",
+  "license": "MIT",
   "scripts": {
-    "start": "craco start",
-    "build": "craco build",
-    "test": "craco test",
-    "eject": "react-scripts eject",
-    "storybook": "start-storybook -p 9009 -s public",
-    "build-storybook": "build-storybook -s public"
+    "start": "npx parcel src/index.html --no-cache -p 3000 -op",
+    "build": "npx parcel build -d dist --no-autoinstall --public-url /try src/index.html"
   },
-  "eslintConfig": {
-    "extends": "react-app"
+  "dependencies": {
+    "effector": "^20.1.2",
+    "effector-react": "^20.3.0",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
+    "styled-components": "^5.0.0-beta.8"
   },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ],
   "devDependencies": {
-    "@craco/craco": "^4.1.0",
-    "core-js": "^2.6.5",
-    "linaria": "^1.3.1",
-    "@storybook/react": "^5.0.6",
-    "@storybook/addon-actions": "^5.0.6",
-    "@storybook/addon-links": "^5.0.6",
-    "@storybook/addons": "^5.0.6",
-    "@babel/core": "^7.4.3",
-    "babel-loader": "^8.0.5"
+    "@babel/core": "^7.5.5",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.4.4",
+    "@babel/plugin-proposal-optional-chaining": "^7.2.0",
+    "@babel/plugin-transform-strict-mode": "^7.2.0",
+    "@babel/preset-env": "^7.5.5",
+    "@babel/preset-flow": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/standalone": "^7.5.5",
+    "babel-plugin-styled-components": "^1.10.6",
+    "eslint": "^6.2.2",
+    "parcel-bundler": "^1.12.3",
+    "terser": "^4.2.1"
   }
 }
