--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,12 @@
   "dependencies": {
     "effector": "^20.1.2",
     "effector-react": "^20.3.0",
+    "formik": "^1.5.8",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "styled-components": "^5.0.0-beta.8"
+    "react-router-dom": "^5.0.1",
+    "styled-components": "^5.0.0-beta.8",
+    "yup": "^0.27.0"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
@@ -26,6 +29,7 @@
     "@babel/standalone": "^7.5.5",
     "babel-plugin-styled-components": "^1.10.6",
     "eslint": "^6.2.2",
+    "flow-typed": "^2.6.1",
     "parcel-bundler": "^1.12.3",
     "terser": "^4.2.1"
   }
